# koniscript

./: .gitignore  .python-version  CONTRIBUTING.md  GEMINI.md  ISA.md  README.md  RELEASE_BODY.md  RELEASE_TITLE.txt  VM.py  base_env.py  bench.py  build-debug.bat  build-debug.sh  build-vm.bat  build-vm.sh  build.bat  build.py  build.sh  build_nuitka.py  build_vm.py  deleted.py  delme.txt  devomni  devray  devvm  feedback.md  fib.py  lolscript.py  ls  main.py  math.ls  notes.md  pyproject.toml  ray.py  ray.spec  repl.py  run-debug.bat  run-debug.sh  runtime.py  something.ls  (+10 more)
.github/workflows/: release.yml
deprecated/: VM.py
examples/: fib.kn  fib.om
koni_lsp/: server.py
koni_lsp/editors/vscode/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
koni_lsp/editors/vscode/src/: extension.ts
koni_lsp/editors/vscode/syntaxes/: koniscript.tmLanguage.json
kovm/: Cargo.toml
kovm/src/: lib.rs  main.rs  runtime.rs  vm.rs
lolscript_vm/: Cargo.toml  test.lsc
lolscript_vm/src/: main.rs  runtime.rs
omni_lsp/: main.py  other.py  server.py
omni_lsp/editors/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vsc-extension-quickstart.md
omni_lsp/editors/vscode/src/: extension.ts
omni_vm/: Cargo.toml  clippy
omni_vm/src/: main.rs  runtime.rs
ray_vm/: Cargo.toml  test.lsc
ray_vm/src/: main.rs  runtime.rs
specs/documentation/: errors.md  index.md
specs/future/: platform_files.md
src/: base_env.py  ray.py  runtime.py
src/koni_compiler/: base_env.py  errs.md  koni.py  main.py  pyproject.toml  run_tests.py  runtime.py
src/omni_compiler/: base_env.py  main.py  omni.py  pyproject.toml  runtime.py
src/omni_script/: base_env.py  errs.md  main.py  omni.py  runtime.py
src/ray/: base_env.py  main.py  ray.py  runtime.py
tests/: test_arithmetic.kn  test_arr_dict_assign.kn  test_arrays.kn  test_basic.py  test_block_scopes.kn  test_break.kn  test_closures.kn  test_comparison.kn  test_compound_assign.kn  test_decl_error.kn  test_first_class_funcs.kn  test_floats.kn  test_func_hoisting_import.kn  test_funcs.kn  test_funcs.om  test_if_else.kn  test_import.kn  test_len.kn  test_logical.kn  test_null.kn  test_string_methods.om  test_type_conv.kn  test_unary.kn  test_variables.kn  test_while.kn
todos/: platform_files.md
(+1 files in other folders)
