[project]
name = "omni_script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.1",
    "nuitka>=4.0.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "typer>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/omni_script"]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
[project.scripts]
omni = "omni_script.omni:app"
[tool.ruff.format]
quote-style = "single"