[project]
name = "omni_script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]
[project.optional-dependencies]
nuitka = ["nuitka>=4.0.1"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/omni_compiler"]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
[project.scripts]
omni = "omni_compiler.omni:app"
[tool.ruff.format]
quote-style = "single"

[tool.uv.workspace]
members = [
    "omni_lsp",
    "src/omni_compiler",
]
