[project]
name = "koni_script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansimarkup>=2.2.0",
    "pygls>=2.0.1",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "typer>=0.24.1",
]
[project.optional-dependencies]
nuitka = [
    "nuitka[onefile]>=4.0.3"
]
dev = [
    "pyperclip>=1.11.0",
    "questionary>=2.1.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/koni_compiler"]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
[project.scripts]
koni = "koni_compiler.koni:app"
test = "koni_compiler.run_tests:main"
[tool.ruff.format]
quote-style = "single"

[tool.uv.workspace]
members = [
    "src/koni_compiler",
]
